# Tapioca

./: .gitignore  Circularity.py  Cropping.ipynb  Dataset explorer.py  Default_masking.py  README.md  SAMMirco.py  Test_Env.ipynb  check_overlap.py  create_training.py  environment.yml  help_me.py  interface.py  interface_tk.py  main.py  nesting_check.py  pyproject.toml  requirements.txt  results.csv  toga_gui.py  toga_gui.spec
Checkpoint images/: results.csv  results.xlsx
DropletPNGS/: 100_30_2.tif  100_30_3.tif  100_30_4.tif  30_30_1.tif  30_30_3.tif  30_30_4.tif  30_30_5.tif  45_30_5.tif  60_30_1.tif  60_30_5.tif  75_30_1.tif  75_30_4.tif  90_30_1.tif  90_30_5.tif  DROPELTS_11.tif  DROPELTS_12.tif  DROPELTS_13.tif  DROPELTS_14.tif  DROPELTS_15.tif  DROPELTS_4.tif  DROPELTS_5.tif  DROPELTS_6.tif  DROPLETS1_1.tif  DROPLETS1_10.tif  DROPLETS1_3.tif  DROPLETS1_7.tif  DROPLETS2_10.tif  DROPLETS2_3.tif  DROPLETS2_4.tif  DROPLETS2_5.tif  DROPLETS2_6.tif  DROPLETS2_9.tif
MASKS/: 100_30_1.tif  100_30_2.tif  100_30_3.tif  100_30_4.tif  100_30_5.tif  30_30_1.tif  30_30_2.tif  30_30_3.tif  30_30_4.tif  30_30_5.tif  45_30_1.tif  45_30_2.tif  45_30_3.tif  45_30_4.tif  45_30_5.tif  60_30_1.tif  60_30_2.tif  60_30_3.tif  60_30_4.tif  60_30_5.tif  75_30_1.tif  75_30_2.tif  75_30_3.tif  75_30_4.tif  75_30_5.tif  90_30_1.tif  90_30_2.tif  (+39 more)
hello/: MAINFEST.in  pyproject.toml  results.csv  results.xlsx
hello/src/Tapioca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hello/src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+72 files in other folders)
