[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "Tapioca"
version = "0.0.2"
authors = [
  { name="Advik Sikligar", email="asikl2@uic.edu" },
]
description = "A UI to use SAM to quantify droplet geometry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy~=1.26.4",
"pillow~=10.4.0",
"torchvision~=0.18.1",
"distinctipy~=1.3.4",
"matplotlib~=3.9.1",
"pandas~=2.2.2",
"opencv-python~=4.10.0.84",
"timm~=1.0.8",
"mobile_sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
"openpyxl~=3.1.4"]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
realpython = "Tapioca.__main__:main"

[tool.setuptools]
include-package-data = true

[packages.find]
where = ["src"]

[package-data]
mypkg = ["*.pt", "*.pth"]